Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-36528

QDir::entryList() gives incorrect results on android

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.3.0
    • 5.2.0
    • Core: I/O
    • None
    • Android
    • 55db6736ac7ffe374417fa7271a97fe7ccae1993

    Description

      When calling QDir::entryList() on android, the first file in the directory does not show up in the returned QStringList. This happens very consistently and is easy to reproduce.

      To demonstrate, please take the attached project and build/run it for both mac and android (I know it works on mac. I haven't checked on other platforms).

      Attachments

        For Gerrit Dashboard: QTBUG-36528
        # Subject Branch Project Status CR V

        Activity

          People

            esabraha Eskil Abrahamsen Blomfeldt
            shantzis62 Michael Shantzis
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes